// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateHtml - snapshots > snapshot for 'Auto Inference (Basics)' ('auto-inference') 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8">
  <title>Microviz Auto Inference (Basics)</title>
  <script type="module">
    import "{{CDN_URL}}";
  </script>
  <style>
    body { font-family: system-ui, sans-serif; padding: 2rem; }
    h1 { font-size: 1.25rem; margin-bottom: 1rem; }
    .grid { display: grid; gap: 1.5rem; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); }
    .card {
      border: 1px solid #e2e8f0;
      border-radius: 0.75rem;
      padding: 1rem;
      background: #fff;
    }
    h2 { font-size: 0.875rem; margin: 0 0 0.5rem; color: #64748b; }
  </style>
</head>
<body>
  <h1>Auto Inference (Basics)</h1>
  <div class="grid">
      <div class="card">
      <h2>Series → Sparkline</h2>
      <microviz-auto
        data="59, 57, 62, 57, 59"
        data-kind="series"
        width="200"
        height="32"
      ></microviz-auto>
    </div>
      <div class="card">
      <h2>Delta → Bullet</h2>
      <microviz-auto
        data='{"current":33,"max":37,"previous":15}'
        data-kind="delta"
        width="220"
        height="40"
      ></microviz-auto>
    </div>
      <div class="card">
      <h2>Segments → Donut</h2>
      <microviz-auto
        data='[{"color":"#6366f1","name":"Desktop","pct":38},{"color":"#22c55e","name":"Mobile","pct":36},{"color":"#f59e0b","name":"Tablet","pct":26}]'
        data-kind="segments"
        width="140"
        height="140"
      ></microviz-auto>
    </div>
      <div class="card">
      <h2>Value → Bar</h2>
      <microviz-auto
        data='{"max":20,"value":16}'
        data-kind="value"
        width="220"
        height="32"
      ></microviz-auto>
    </div>
    </div>
</body>
</html>"
`;

exports[`generateHtml - snapshots > snapshot for 'Auto Inference (CSV)' ('auto-csv') 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8">
  <title>Microviz Auto Inference (CSV)</title>
  <script type="module">
    import "{{CDN_URL}}";
  </script>
  <style>
    body { font-family: system-ui, sans-serif; padding: 2rem; }
    h1 { font-size: 1.25rem; margin-bottom: 1rem; }
  </style>
</head>
<body>
  <h1>Auto Inference (CSV)</h1>
  <microviz-auto
        data='pct,color,name
35,#6366f1,Desktop
32,#22c55e,Mobile
33,#f59e0b,Tablet'
        data-kind="csv"
        width="160"
        height="160"
      ></microviz-auto>
</body>
</html>"
`;

exports[`generateHtml - snapshots > snapshot for 'Auto Override' ('auto-override') 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8">
  <title>Microviz Auto Override</title>
  <script type="module">
    import "{{CDN_URL}}";
  </script>
  <style>
    body { font-family: system-ui, sans-serif; padding: 2rem; }
    h1 { font-size: 1.25rem; margin-bottom: 1rem; }
  </style>
</head>
<body>
  <h1>Auto Override</h1>
  <microviz-auto
        data='[{"color":"#6366f1","name":"Desktop","pct":34},{"color":"#22c55e","name":"Mobile","pct":30},{"color":"#f59e0b","name":"Tablet","pct":36}]'
        data-kind="override"
        width="240"
        height="60"
        type="bullet-gauge"
      ></microviz-auto>
</body>
</html>"
`;

exports[`generateHtml - snapshots > snapshot for 'Bar Chart' ('bar-chart') 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8">
  <title>Microviz Bar Chart</title>
  <script type="module">
    import "{{CDN_URL}}";
  </script>
  <style>
    body { font-family: system-ui, sans-serif; padding: 2rem; }
    h1 { font-size: 1.25rem; margin-bottom: 1rem; }
  </style>
</head>
<body>
  <h1>Bar Chart</h1>
  <microviz-chart
        data="64, 59, 58, 54, 49, 50, 53"
        spec='{"type":"sparkline-bars"}'
        width="280"
        height="120"
      ></microviz-chart>
</body>
</html>"
`;

exports[`generateHtml - snapshots > snapshot for 'CDN Dev Preview' ('cdn-dev-preview') 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8">
  <title>Microviz CDN Dev Preview</title>
  <script type="module">
    // Replace with your PR/sha build output:
    const base = "https://cdn-dev.microviz.org/preview/pr/1/sha/REPLACE_SHA";
    await import(\`\${base}/@microviz/elements/cdn/microviz.js\`);
  </script>
  <style>
    body { font-family: system-ui, sans-serif; padding: 2rem; }
    h1 { font-size: 1.25rem; margin-bottom: 1rem; }
  </style>
</head>
<body>
  <h1>CDN Dev Preview</h1>
  <microviz-sparkline
    data="70, 69, 65, 62, 62, 61, 59, 58, 59"
    width="200"
    height="32"
  ></microviz-sparkline>
</body>
</html>"
`;

exports[`generateHtml - snapshots > snapshot for 'CSP-Safe (No Web Components)' ('csp-safe') 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8">
  <title>CSP-Safe Microviz</title>
  <script type="importmap">
    {
      "imports": {
        "@microviz/core": "https://esm.sh/@microviz/core",
        "@microviz/renderers": "https://esm.sh/@microviz/renderers"
      }
    }
  </script>
  <style>
    body { font-family: system-ui, sans-serif; padding: 2rem; }
    h1 { font-size: 1.25rem; margin-bottom: 1rem; }
    p { color: #64748b; font-size: 0.875rem; margin-bottom: 1rem; }
  </style>
</head>
<body>
  <h1>CSP-Safe Rendering</h1>
  <p>Uses @microviz/core + @microviz/renderers directly (no Web Components)</p>
  <div id="chart"></div>

  <script type="module">
    import { computeModel } from '@microviz/core';
    import { renderSvgString } from '@microviz/renderers';

    const model = computeModel({
      data: [49, 47, 48, 48, 50, 51, 47, 47, 49, 50],
      spec: { type: 'sparkline' },
      size: { width: 200, height: 32 }
    });

    // renderSvgString returns safe SVG markup generated by microviz
    const svgMarkup = renderSvgString(model);
    document.getElementById('chart').insertAdjacentHTML('beforeend', svgMarkup);
    console.log('Chart rendered with', model.marks.length, 'marks');
  </script>
</body>
</html>"
`;

exports[`generateHtml - snapshots > snapshot for 'Donut Chart' ('donut') 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8">
  <title>Microviz Donut Chart</title>
  <script type="module">
    import "{{CDN_URL}}";
  </script>
  <style>
    body { font-family: system-ui, sans-serif; padding: 2rem; }
    h1 { font-size: 1.25rem; margin-bottom: 1rem; }
  </style>
</head>
<body>
  <h1>Donut Chart</h1>
  <microviz-chart
        data='[{"color":"#6366f1","name":"Desktop","pct":27},{"color":"#22c55e","name":"Mobile","pct":43},{"color":"#f59e0b","name":"Tablet","pct":30}]'
        spec='{"type":"donut"}'
        width="160"
        height="160"
      ></microviz-chart>
</body>
</html>"
`;

exports[`generateHtml - snapshots > snapshot for 'Interactive Chart' ('interactive') 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8">
  <title>Microviz Interactive Chart</title>
  <script type="module">
    import "{{CDN_URL}}";
  </script>
  <style>
    body { font-family: system-ui, sans-serif; padding: 2rem; }
    h1 { font-size: 1.25rem; margin-bottom: 1rem; }
    #output {
      margin-top: 1rem;
      padding: 0.5rem;
      background: #f1f5f9;
      border-radius: 0.25rem;
      font-size: 0.875rem;
      min-height: 1.5rem;
    }
  </style>
</head>
<body>
  <h1>Interactive Chart</h1>
  <microviz-chart
        data="69, 70, 68, 67, 66, 69, 64, 62, 64, 62, 59, 57"
        spec='{"type":"sparkline"}'
        width="280"
        height="64"
        hit-slop="8"
        id="myChart"
        interactive
      ></microviz-chart>
  <div id="output">Hover over the chart...</div>
  <script type="module">
    const chart = document.getElementById('myChart');
    const output = document.getElementById('output');

    chart.addEventListener('microviz-hit', (e) => {
      const { hit, client } = e.detail;
      if (hit) {
        output.textContent = \`Hovered: \${hit.markId} at (\${Math.round(client.x)}, \${Math.round(client.y)})\`;
      } else {
        output.textContent = 'Hover over the chart...';
      }
    });
  </script>
</body>
</html>"
`;

exports[`generateHtml - snapshots > snapshot for 'Multiple Charts' ('multiple-charts') 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8">
  <title>Microviz Multiple Charts</title>
  <script type="module">
    import "{{CDN_URL}}";
  </script>
  <style>
    body { font-family: system-ui, sans-serif; padding: 2rem; }
    h1 { font-size: 1.25rem; margin-bottom: 1rem; }
    .grid { display: grid; gap: 1.5rem; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); }
    .card {
      border: 1px solid #e2e8f0;
      border-radius: 0.75rem;
      padding: 1rem;
      background: #fff;
    }
    h2 { font-size: 0.875rem; margin: 0 0 0.5rem; color: #64748b; }
  </style>
</head>
<body>
  <h1>Multiple Charts</h1>
  <div class="grid">
      <div class="card">
      <h2>Revenue Trend</h2>
      <microviz-sparkline
        data="73, 72, 73, 75, 73, 76, 75"
        width="180"
        height="40"
      ></microviz-sparkline>
    </div>
      <div class="card">
      <h2>Sales by Region</h2>
      <microviz-chart
        data="32, 34, 35, 31"
        spec='{"type":"sparkline-bars"}'
        width="180"
        height="80"
      ></microviz-chart>
    </div>
      <div class="card">
      <h2>Traffic Sources</h2>
      <microviz-chart
        data='[{"color":"#6366f1","name":"Desktop","pct":37},{"color":"#22c55e","name":"Mobile","pct":30},{"color":"#f59e0b","name":"Tablet","pct":33}]'
        spec='{"type":"donut"}'
        width="100"
        height="100"
      ></microviz-chart>
    </div>
    </div>
</body>
</html>"
`;

exports[`generateHtml - snapshots > snapshot for 'Sparkline' ('sparkline') 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8">
  <title>Microviz Sparkline</title>
  <script type="module">
    import "{{CDN_URL}}";
  </script>
  <style>
    body { font-family: system-ui, sans-serif; padding: 2rem; }
    h1 { font-size: 1.25rem; margin-bottom: 1rem; }
  </style>
</head>
<body>
  <h1>Sparkline</h1>
  <microviz-sparkline
        data="35, 38, 35, 31, 27, 24, 23, 21, 20"
        width="200"
        height="32"
      ></microviz-sparkline>
</body>
</html>"
`;
